--- a/frontend/src/components/Comments/Comments.css
+++ b/frontend/src/components/Comments/Comments.css
@@ -1,3 +1,6 @@
+.all_Comments {
+  width: 100%;
+}
 .comments_Component {
   display: flex;
   flex-direction: column;
@@ -7,6 +10,7 @@
   padding-left: 3%;
   padding-right: 3%;
   margin-top: 1.5rem;
+  width: 87%;
 }
 .comments_Component p {
   font-size: 18px;
@@ -44,10 +48,70 @@ span .date {
   font-size: 16px;
 }
 
+.moreVert_Icon_Container_Comment {
+  display: flex;
+  align-items: baseline;
+  flex-direction: row-reverse;
+  position: absolute;
+  right: 0.2rem;
+}
+
+.moreVert_Icon_Container_Comment.active {
+  background-color: var(--grey);
+  transform: translateY(0);
+  transition: var(--speed) ease;
+  border-radius: 10px;
+}
+
+.moreVert_Icon_Container_Comment.inactive {
+  transition: var(--speed) cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  height: 0rem;
+}
+
+.dropdown_Menu.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+  transition: var(--speed) cubic-bezier(-10, -0.28, 0.735, 0.045);
+  z-index: 1;
+}
+
+.dropdown_Menu.inactive {
+  opacity: 0;
+  visibility: hidden;
+  transition: var(--speed) cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  height: 0rem;
+}
+
+.dropdown_Menu button {
+  border: none;
+  background-color: transparent;
+  width: 100%;
+  color: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+  font-family: inherit;
+  padding: 0;
+}
+
+.dropdown_Menu ul {
+  list-style: none;
+  padding: 1rem;
+  text-align: left;
+}
+
+.dropdown_Menu button:hover {
+  color: var(--orange);
+  cursor: pointer;
+}
+
 @media (min-width: 1024px) {
   .comment_Info {
     justify-content: flex-start;
-    gap: 10%;
+    gap: 3rem;
     width: 100%;
+  }
+  .moreVert_Icon_Container_Comment {
+    right: 1rem;
   }
 }
