--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -77,6 +77,10 @@
   outline: none;
 }
 
+.user_Profile_Container {
+  cursor: pointer;
+}
+
 @media only screen and (min-width: 1024px) {
   .header {
     justify-content: space-around;
