--- a/frontend/src/components/NavBar/Navbar.css
+++ b/frontend/src/components/NavBar/Navbar.css
@@ -23,11 +23,14 @@
 .admin_Navbar_bloc,
 .logOut_Navbar_bloc {
   display: none;
+  cursor: pointer;
 }
 
 @media (min-width: 1024px) {
   .hiddenNavbar {
     display: none;
+    opacity: 0;
+    transition: opacity 0.3s ease;
   }
   .containeur_Body_Navbar {
     background-color: var(--grey);
@@ -38,6 +41,8 @@
     flex-direction: column;
     justify-content: flex-start;
     gap: 3rem;
+    opacity: 1;
+    transition: opacity 0.3s ease;
   }
   .home_Navbar {
     display: none;
@@ -109,7 +114,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    cursor: pointer;
     padding-left: 10%;
     padding-right: 10%;
   }
